--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.10.0",
     "bcryptjs": "latest",
     "canvas-confetti": "latest",
     "class-variance-authority": "^0.7.1",
@@ -52,7 +53,7 @@
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
     "mongoose": "latest",
-    "next": "14.2.16",
+    "next": "^14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "8.10.1",
