--- a/package.json
+++ b/package.json
@@ -39,21 +39,22 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.10.0",
     "bcryptjs": "latest",
     "canvas-confetti": "latest",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "latest",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "^2.30.0",
+    "cors": "^2.8.5",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "exrpess": "^0.0.1-security",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
     "mongoose": "latest",
-    "next": "^14.2.16",
+    "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "8.10.1",
@@ -62,6 +63,7 @@
     "react-hot-toast": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
